string -> uuid type
